<resources>
    <string name="app_name">KLNCE IT Central</string>

    <string name="logout">Log out</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="klncelogo">Klncelogo</string>
    <string name="signup">Sign up</string>

    <string name="sidenavopen">Open</string>
    <string name="sidenavclose">Close</string>
    <string name="browse_image">Browse image to upload</string>
    <string name="desc">Description</string>
    <string name="uploadimg">Upload image</string>
    <string name="previousuploads">Previous Uploads</string>


    <string name="imgname">Image Name</string>
    <string name="aboutus"><u>About us</u>\n\nSurya\nSairam\nVenkat\n\nEmail:a2zitdevops@gmail.com</string>
    <string name="title_staff_list">staffs</string>
    <string name="title_staff_detail">staff Detail</string>


    <string name="algates">
        Qualification:B.E.(CSE), M.E.(CSE), PH.D.,\n
        Experience:21.8 (Y.M)\n
        Email ID:alageswaranramaiah@outlook.com
    </string>

</resources>
