<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context="edu.klnce.sairam_kamalay.klncecentral.Mainpage">

    <Button
        android:layout_marginTop="5sp"
        style="@style/buttonstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/browse_image"
        android:onClick="btnBrowse_Click" />

    <ImageView
        android:layout_margin="20sp"
        android:contentDescription="@string/app_name"
        android:layout_width="250sp"
        android:layout_height="250sp"
        android:layout_gravity="center"
        android:id="@+id/imageView"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtImageName"
        android:hint="@string/desc"/>



    <Button
        android:layout_marginTop="10sp"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"
        style="@style/buttonstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uploadimg"
        android:onClick="btnUpload_Click" />

    <Button
        android:layout_marginTop="10sp"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"
        style="@style/buttonstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/previousuploads"
        android:onClick="btnShowListImage_Click" />



</LinearLayout>
