<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main.xml"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:weightSum="1"
    android:gravity="center_vertical"
    android:background="@color/colorPrimaryDark"
    >


   <ImageView
       android:id="@+id/imageView"
       android:layout_height="0dp"
       android:layout_width="match_parent"
       android:layout_weight="0.42"
       app:srcCompat="@drawable/kln"
       android:contentDescription="@string/klncelogo" />

   <EditText
       android:id="@+id/id_email"
       style="@style/edittextsytle"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="15dp"
       android:hint="@string/email"
       android:inputType="textEmailAddress" />

   <EditText
       android:id="@+id/id_password"
       style="@style/edittextsytle"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin = "15dp"
       android:hint="@string/password"
       android:inputType="textPassword" />

   <Button
       style="@style/buttonstyle"
       android:id="@+id/idsignupbtn"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="10dp"
       android:text="@string/signup"/>


</LinearLayout>